<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lightVibrant"
            type="androidx.palette.graphics.Palette.Swatch" />

        <variable
            name="vibrant"
            type="androidx.palette.graphics.Palette.Swatch" />

        <variable
            name="darkVibrant"
            type="androidx.palette.graphics.Palette.Swatch" />

        <variable
            name="lightMuted"
            type="androidx.palette.graphics.Palette.Swatch" />

        <variable
            name="muted"
            type="androidx.palette.graphics.Palette.Swatch" />

        <variable
            name="darkMuted"
            type="androidx.palette.graphics.Palette.Swatch" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_light_vibrant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@{lightVibrant != null ? lightVibrant.rgb : @color/black}"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/tv_light_vibrant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_vibrant_title"
                android:textColor="@{lightVibrant != null ? lightVibrant.titleTextColor : @color/white}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_light_vibrant_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_light_vibrant_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/light_vibrant_body"
                android:textColor="@{lightVibrant != null ? lightVibrant.bodyTextColor : @color/white}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_light_vibrant_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_vibrant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@{vibrant != null ? vibrant.rgb : @color/black}"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_light_vibrant"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/tv_vibrant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrant_title"
                android:textColor="@{vibrant != null ? vibrant.titleTextColor : @color/white}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_vibrant_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_vibrant_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/vibrant_body"
                android:textColor="@{vibrant != null ? vibrant.bodyTextColor : @color/white}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_vibrant_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_dark_vibrant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@{darkVibrant != null ? darkVibrant.rgb : @color/black}"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_vibrant"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/tv_dark_vibrant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_vibrant_title"
                android:textColor="@{darkVibrant != null ? darkVibrant.titleTextColor : @color/white}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_dark_vibrant_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_dark_vibrant_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/dark_vibrant_body"
                android:textColor="@{darkVibrant != null ? darkVibrant.bodyTextColor : @color/white}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dark_vibrant_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_light_muted"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@{lightMuted != null ? lightMuted.rgb : @color/black}"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toEndOf="@id/layout_light_vibrant"
            app:layout_constraintTop_toTopOf="@id/layout_light_vibrant"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/tv_light_muted_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_muted_title"
                android:textColor="@{lightMuted != null ? lightMuted.titleTextColor : @color/white}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_light_muted_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_light_muted_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/light_muted_body"
                android:textColor="@{lightMuted != null ? lightMuted.bodyTextColor : @color/white}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_light_muted_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_muted"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@{muted != null ? muted.rgb : @color/black}"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toEndOf="@id/layout_vibrant"
            app:layout_constraintTop_toTopOf="@id/layout_vibrant"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/tv_muted_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muted_title"
                android:textColor="@{muted != null ? muted.titleTextColor : @color/white}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_muted_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_muted_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/muted_body"
                android:textColor="@{muted != null ? muted.bodyTextColor : @color/white}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_muted_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_dark_muted"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@{darkMuted != null ? darkMuted.rgb : @color/black}"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toEndOf="@id/layout_dark_vibrant"
            app:layout_constraintTop_toTopOf="@id/layout_dark_vibrant"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/tv_dark_muted_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_muted_title"
                android:textColor="@{darkMuted != null ? darkMuted.titleTextColor : @color/white}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_dark_muted_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_dark_muted_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/dark_muted_body"
                android:textColor="@{darkMuted != null ? darkMuted.bodyTextColor : @color/white}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dark_muted_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>